<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment" >

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:text="@string/register"
        app:backgroundTint="@color/design_default_color_primary_dark"
        app:layout_constraintBottom_toTopOf="@+id/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_des" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:text="@string/search_product"
        app:backgroundTint="@color/design_default_color_primary_dark"
        app:layout_constraintBottom_toTopOf="@+id/btn_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reg" />

    <Button
        android:id="@+id/btn_del"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="233dp"
        android:text="@string/delete"
        app:backgroundTint="@color/design_default_color_primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ed" />

    <Button
        android:id="@+id/btn_ed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:text="@string/edit"
        app:backgroundTint="@color/design_default_color_primary_dark"
        app:layout_constraintBottom_toTopOf="@+id/btn_del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search" />

    <EditText
        android:id="@+id/txt_pri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/txt_des"
        app:layout_constraintStart_toStartOf="@+id/txt_cod"
        app:layout_constraintTop_toBottomOf="@+id/txt_cod" />

    <EditText
        android:id="@+id/txt_cod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txt_pri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/btn_reg"
        app:layout_constraintStart_toStartOf="@+id/txt_pri"
        app:layout_constraintTop_toBottomOf="@+id/txt_pri" />
</androidx.constraintlayout.widget.ConstraintLayout>